--- a/app/src/main/res/layout/activity_battle.xml
+++ b/app/src/main/res/layout/activity_battle.xml
@@ -2,6 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
+
+    <com.example.rating2.view.MyBattleView android:layout_width="wrap_content" android:layout_height="match_parent"
+                                           tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="0dp">
+
+    </com.example.rating2.view.MyBattleView>
+    <ImageView
+            android:layout_width="155dp"
+            android:layout_height="152dp" app:srcCompat="@drawable/istockphoto_154199789_612x612"
+            android:id="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button android:layout_width="164dp"
             android:layout_height="157dp"
             android:id="@+id/button_gun"
